--- a/templates/webshell.html
+++ b/templates/webshell.html
@@ -244,7 +244,7 @@
         <header>
             <h1>WebShell Panel</h1>
             <nav>
-                <a href="/admin_panel">Dashboard</a>
+                <a href="/admin_dashboard">Dashboard</a>
                 <a href="/flask_admin/diagnostics/">Diagnostyka</a>
             </nav>
         </header>
