--- a/templates/diagnostics.html
+++ b/templates/diagnostics.html
@@ -284,7 +284,7 @@
         <header>
             <h1>Diagnostyka Systemu</h1>
             <nav>
-                <a href="/">Dashboard</a>
+                <a href="/admin_dashboard">Dashboard</a>
                 
                 
                 <a href="/flask_admin/webshell/">WebShell</a>
