--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -26,7 +26,7 @@
                     <li><a href="{{ url_for('user.index_view') }}"><i class="fa fa-users"></i> Użytkownicy</a></li>
                     <li><a href="{{ url_for('chatsession.index_view') }}"><i class="fa fa-comments"></i> Sesje Czatu</a></li>
                     <li><a href="{{ url_for('message.index_view') }}"><i class="fa fa-envelope"></i> Wiadomości</a></li>
-                    <li><a href="{{ url_for('database.index') }}"><i class="fa fa-database"></i> Zarządzanie Bazą</a></li>
+                    <li><a href="{{ url_for('auth.index') }}"><i class="fa fa-database"></i> Zarządzanie Bazą</a></li>
                     <li><a href="{{ url_for('diagnostics.index') }}"><i class="fa fa-stethoscope"></i> Diagnostyka</a></li>
                     <li><a href="{{ url_for('webshell.index') }}"><i class="fa fa-terminal"></i> Webshell</a></li>
                 </ul>
